# Templates

./: flake.nix
python-fhs/: env.yml  flake.nix
python-poetry/: pyproject.toml
